--- a/Notebook/Welcome_To_Colab.ipynb
+++ b/Notebook/Welcome_To_Colab.ipynb
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('D:/College/sem 7/final year project/gith/AniSearch/anime.csv')\n",
+    "df = pd.read_csv('path to csv')\n",
     "df = df.reset_index()\n",
     "df.head()"
    ]
