--- a/Notebook/code_final.ipynb
+++ b/Notebook/code_final.ipynb
@@ -374,7 +374,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the CSV file\n",
-    "data = pd.read_csv('D:/College/sem 7/final year project/gith/AniSearch/anime.csv')  # Replace with your actual file name\n",
+    "data = pd.read_csv('path to csv')  # Replace with your actual file name\n",
     "\n",
     "# Drop rows with missing values\n",
     "data = data.dropna()\n",
